--- a/web1.html
+++ b/web1.html
@@ -4,6 +4,26 @@
 
     </head>
     <body> <!-- ブラウザに表示されるコンテンツ -->
+        <!-- ロゴ -->
+        LITALICOワンダー(画像)
 
+        <!-- ナビゲーション -->
+        LITALICOワンダーとは　コースガイド　体験授業について
+
+        <!— アイキャッチ —>
+        アイキャッチ(画像)
+
+        <!-- 見出し -->
+        IT×ものづくり教室
+
+        <!-- パラグラフ -->
+        LITALICOワンダーは、テクノロジーを活かしたものづくりを通して、
+        子どもの個性に合わせ、創造力を育む学びの場です。
+        プログラミングやロボット製作、デジタルファブリケーションなど、
+        子どもが好きなものに没頭することができます。
+
+         <!— メニューボタン —>
+        LITALICOワンダーとは
+        創造力を養う教育とは
     </body>
 </html>
